// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field.setError() calls onError callback if exists 1`] = `
Array [
  "Nice error !!!",
  Field {
    "config": Object {
      "onError": [Function],
    },
    "currentValue": null,
    "defaultValue": null,
    "error": "Nice error !!!",
    "initialValue": null,
    "previousValue": null,
    "validator": [Function],
  },
]
`;

exports[`form.setError calls onError callback only once 1`] = `
Array [
  Object {
    "confirmPassword": null,
    "name": null,
    "password": "a error",
    "username": "a error",
  },
  Form {
    "config": Object {
      "onError": [Function],
    },
    "confirmPassword": Field {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "confirmPassword",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "fieldNames": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "getNotified": true,
    "name": Field {
      "config": Object {
        "modify": [Function],
      },
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "name",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "password": Field {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": "a error",
      "fieldName": "password",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
      ],
    },
    "username": Field {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": "a error",
      "fieldName": "username",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
  },
]
`;

exports[`form.triggerOnChange calls callback with value and form instance 1`] = `
Array [
  Object {
    "confirmPassword": null,
    "name": null,
    "password": null,
    "username": "ausername",
  },
  Form {
    "config": Object {
      "onChange": [Function],
    },
    "confirmPassword": Field {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "confirmPassword",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "fieldNames": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "getNotified": true,
    "name": Field {
      "config": Object {
        "modify": [Function],
      },
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "name",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "password": Field {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "password",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
      ],
    },
    "username": Field {
      "config": Object {},
      "currentValue": "ausername",
      "defaultValue": null,
      "error": null,
      "fieldName": "username",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
  },
]
`;

exports[`form.triggerOnError calls callback with value and form instance 1`] = `
Array [
  Object {
    "confirmPassword": null,
    "name": null,
    "password": null,
    "username": "an error",
  },
  Form {
    "config": Object {
      "onError": [Function],
    },
    "confirmPassword": Field {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "confirmPassword",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "fieldNames": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "getNotified": true,
    "name": Field {
      "config": Object {
        "modify": [Function],
      },
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "name",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "password": Field {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": null,
      "fieldName": "password",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
      ],
    },
    "username": Field {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": "an error",
      "fieldName": "username",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
  },
]
`;

exports[`form.validate calls onError callback 1`] = `
Array [
  Object {
    "confirmPassword": "This field is required.",
    "name": "This field is required.",
    "password": "This field is required.",
    "username": "This field is required.",
  },
  Form {
    "config": Object {
      "onError": [Function],
    },
    "confirmPassword": Field {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": "This field is required.",
      "fieldName": "confirmPassword",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "fieldNames": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "getNotified": true,
    "name": Field {
      "config": Object {
        "modify": [Function],
      },
      "currentValue": null,
      "defaultValue": null,
      "error": "This field is required.",
      "fieldName": "name",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
    "password": Field {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": "This field is required.",
      "fieldName": "password",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
      ],
    },
    "username": Field {
      "config": Object {},
      "currentValue": null,
      "defaultValue": null,
      "error": "This field is required.",
      "fieldName": "username",
      "initialValue": null,
      "multipleErrors": false,
      "parent": [Circular],
      "previousValue": null,
      "validator": Array [
        [Function],
        [Function],
      ],
    },
  },
]
`;
